k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobs-app
  labels:
    name: jobs-app
